--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.1",
+    "@fortawesome/free-regular-svg-icons": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "expo": "~52.0.18",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
-    "expo-router": "^3.1.0",
+    "expo-router": "4.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0"
+    "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13",
+    "expo-checkbox": "~4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro": "^0.81.0"
   },
   "private": true
 }
