--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "axios": "^1.7.9",
     "expo": "~52.0.18",
+    "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "4.0.11",
@@ -23,7 +25,10 @@
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "expo-checkbox": "~4.0.0"
+    "zod": "^3.24.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-secure-store": "~14.0.0",
+    "@react-native-picker/picker": "2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
